<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>


    <!-- Options -->
    <string name="btn_option_ok">OK</string>
    <string name="btn_option_accept">Accept</string>
    <string name="btn_option_cancel">Cancel</string>
    <string name="btn_option_no">NO</string>
    <string name="btn_option_yes">SI</string>

    <!-- LoginActivity -->
    <string name="img_logo_background">Logo Background</string>
    <string name="img_logo_gradient">Logo Gradient</string>
    <string name="img_logo_main">Logo Main</string>

    <string name="login_user_txt">Username</string>
    <string name="login_pass_txt">Password</string>
    <string name="login_btn_login">Log In</string>
    <string name="login_btn_sing_up">Sing Up</string>
    <string name="login_t_y_c_txt">By joining you agree our </string>
    <string name="login_t_y_c_link"><u>Terms &amp; Conditions</u></string>
    
    <string name="login_service_request">Connecting to server, please wait…</string>

    <!-- MainActivity -->
    <string name="main_back_msg_title">Really Exit?</string>
    <string name="main_back_msg">Are you sure you want to exit?</string>
    <string name="main_title">WOLOX</string>
    <string name="main_tab_news">News</string>
    <string name="main_tab_profile">Profile</string>
    <string name="main_first_page">Page 1</string>
    <string name="main_second_page">Page 2</string>

    <!-- Errors-->
    <string name="error_empty_field">The Field is Required</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_wrong_credentials">Invalid email or password</string>
    <string name="error_multiple_response">There is more than one match in database</string>
    <string name="error_network_unavailable">Network is unavailable, please try later…</string>
    <string name="error_empty_list">Empty List!! Please wait a few seconds and try to refresh…</string>
    <string name="error_news_service">Network error, please wait a few seconds and try to refresh</string>
    <string name="error_news_empty_data">No data from service, please wait a few seconds and try again</string>
    <string name="error_invalid_arguments">Internal error, please try again…</string>
    <string name="error_login_google">Error whit Google connection, please try again…</string>
    <string name="error_credentials_error">Credentials expired… Please login again</string>

    <!-- Tmp Messages -->
    <string name="valid_login_form">to main screen…</string>
    <string name="login_to_singup">to SingUp screen…</string>

    <!-- NewsActivity -->
    <string name="news_fab">Floating Action Button Clicked!!</string>
    <string name="news_refresh_list">Refresh</string>
    <string name="news_uploading">Uploading data… please wait</string>

    <!-- ProfileActivity -->
    <string name="profile_search_btn">Search</string>
    <string name="profile_search_txt">Song…</string>
    <string name="profile_network_error">Couldnt download data, Network error</string>

</resources>